# rest_weather

./: Cargo.toml  README.md
config/: configuration.toml
src/: main.rs
src/app/: application.rs  mod.rs
src/model/: forecast.rs  mod.rs  temperature.rs
src/model/json/: accuweather.rs  mod.rs  openweathermap.rs  weatherbit.rs
src/rest/: mod.rs  model.rs  server.rs
src/service/: mod.rs  util.rs  webservice.rs
src/service/accuweather/: mod.rs  parser.rs  url_builder.rs
src/service/configuration/: accuweather.rs  configuration.rs  error.rs  mod.rs  openweathermap.rs  weatherbit.rs
src/service/openweathermap/: impl_remote_access.rs  mod.rs  parser.rs  url_builder.rs
src/service/remote_access/: error.rs  getter_weather.rs  mod.rs  weather_access.rs
src/service/weatherbit/: impl_remote_access.rs  mod.rs  parser.rs  url_builder.rs
src/tests/: accu_weather.rs  configuration.rs  dates.rs  mod.rs  open_weather_map.rs  remote_access.rs  weather_bit.rs  webservice.rs
