[package]
name = "rest_weather"
version = "0.1.1"
authors = ["amirckhanov <ghosty8707@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.5"
chrono = {version = "0.4", features = ["serde"] }
# tokio = { version = "0.2", features = ["full"] }
actix-web = { version = "3.1", features=[ "default"] }
futures = "0.3"
reqwest = { version = "*", features=[ "json" ] }